[gd_scene load_steps=8 format=3 uid="uid://dvik7v57h3mcf"]

[ext_resource type="PackedScene" uid="uid://j6dd7mgd0p3w" path="res://Scenes/Objects/Characters/Enemies/enemy.tscn" id="1_p5n53"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/Enemies/enemy_patrolling.gd" id="2_0h1ht"]
[ext_resource type="Texture2D" uid="uid://dutytu7jhr5nc" path="res://Resources/Textures/PLACEHOLDERS/Scorpion (AxelMode)-cutoutt.png" id="3_6kuqm"]
[ext_resource type="PackedScene" uid="uid://d4hvse6k4r8rh" path="res://Scenes/Objects/debug_vars_visualizer.tscn" id="4_qxwfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm7tx"]
size = Vector2(22, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bbuj"]
size = Vector2(24, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkwai"]
size = Vector2(160, 20)

[node name="EnemyPatrolling" instance=ExtResource("1_p5n53")]
script = ExtResource("2_0h1ht")
_charge_speed = 200.0

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_mm7tx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6bbuj")

[node name="Sprite" type="Sprite2D" parent="." index="2"]
texture = ExtResource("3_6kuqm")

[node name="Detectors" type="Node2D" parent="." index="3"]

[node name="GapDetectLeft" type="RayCast2D" parent="Detectors" index="0"]
position = Vector2(-17, 0)
target_position = Vector2(0, 18)

[node name="GapDetectRight" type="RayCast2D" parent="Detectors" index="1"]
position = Vector2(17, 0)
target_position = Vector2(0, 18)

[node name="ObstacleDetectLeft" type="RayCast2D" parent="Detectors" index="2"]
target_position = Vector2(-14, 0)

[node name="ObstacleDetectRight" type="RayCast2D" parent="Detectors" index="3"]
target_position = Vector2(14, 0)

[node name="PlayerDetection" type="Area2D" parent="Detectors" index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/PlayerDetection" index="0"]
visible = false
position = Vector2(7, -0.5)
shape = SubResource("RectangleShape2D_bkwai")

[node name="DebugVarsVisualizer" parent="." index="5" instance=ExtResource("4_qxwfe")]
offset_left = 20.0
offset_top = -15.0
offset_right = 28.0
offset_bottom = -7.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

[connection signal="body_entered" from="Detectors/PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Detectors/PlayerDetection" to="." method="_on_player_detection_body_exited"]
